# Extend-PubMed-MeSH-KG

./: Cargo.toml  README.md  flake.nix
crates/dispatch_derive/: Cargo.toml  README.md
crates/dispatch_derive/src/: lib.rs
nix/: package.nix
src/: main.rs
src/subcommand/: mod.rs
src/subcommand/cui_umls/: README.md  mod.rs  models.rs
src/subcommand/embedding/: README.md  mod.rs
src/subcommand/kg_umls/: README.md  mod.rs
